# get_setting

./: README.md  pyproject.toml
get_setting/: __init__.py  get_setting.py
tests/: settings.json  test_get_setting.py
