[tool.poetry]
name = "get-setting"
version = "0.1.0"
description = ""
authors = ["KUWAHARA <kuwahara@gsi.go.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
